--- a/app/assets/stylesheets/classrooms.scss
+++ b/app/assets/stylesheets/classrooms.scss
@@ -29,6 +29,12 @@
     width: 140px;
     height: 40px;
 }
+.classroom_read_btn {
+    margin-right: 20px;
+    margin-bottom: 20px;
+    width: 140px;
+    height: 40px;
+}
 
 .new_classroom {
     display: flex;
@@ -63,7 +69,7 @@
 }
 
 .news-child-div{
-    min-height: 150px;
+    min-height: 300px;
 }
 
 .announcement_hide{
