--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -21,7 +21,9 @@
 <div class='w-full justify-content-center m-auto'>
   <div class="w-75 news-main-div row justify-content-center padding m-auto">
     <div class="m-3">
-      <div class="card news-child-div">
+      <div class="card news-child-div bg-image text-white" style="
+      background-image: url('https://mdbcdn.b-cdn.net/img/new/fluid/nature/015.webp');
+    ">
         <div>
           <p class="ml-2"></p>
 
@@ -35,14 +37,12 @@
           </div>
           <h6 class="classroom_description"><%= @classroom.description%></h6>
           <% if current_user.id == @classroom.user_id%>
-          <h6 class="classroom_description">Code: <%= @classroom.class_code%></h6>
-          <%= button_to "Edit", edit_classroom_path(@classroom), :class => "classroom_read_button", :method => :get%>
-<%end%>
-          <div class="col">
-          <% if current_user.id == @classroom.user_id%>
-              <%= link_to "Edit", edit_classroom_path(@classroom)%>
-              <%= link_to "Destroy", @classroom, method: :delete, data: { confirm: 'Are you sure?' }%>
+            <h6 class="classroom_description">Code: <%= @classroom.class_code%></h6>
+            <%= button_to "Edit", edit_classroom_path(@classroom), :class => "classroom_read_button btn btn-primary", :method => :get%>
+            <%= button_to "Delete", @classroom,:class => "classroom_read_button btn btn-primary", method: :delete, data: { confirm: 'Are you sure?' }%>
           <%end%>
+          <div class="col">
+          
           <div>
         </div>
       </div>
