--- a/app/views/classworks/index.html.erb
+++ b/app/views/classworks/index.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 
 <h1>Classworks</h1>
 
@@ -11,13 +10,12 @@
 
   <tbody>
     <% @classworks.each do |classwork| %>
-      <div class='d-flex flex-column w-100'>
-        <% if classwork.work_type == 'assignment' %>
-          <p class="d"><%= classwork.body %></p>
-          <a class='nav-link' role='button' href='/assignment/<%=classwork.id%>/submissions'>View Submissions</a>
-        <% end %>
-        <hr/>
-      </div>
+      <% if classwork.work_type == 'assignment' %>
+        <div class='w-100 d-flex flex-column card m-3 p-3'>
+            <p class="d"><%= classwork.body %></p>
+            <a class='nav-link' style='float: right;' role='button' href='/assignment/<%=classwork.id%>/submissions'>View Submissions</a>
+        </div>
+      <% end %>
     <% end %>
   </tbody>
 </table>
