--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -42,14 +42,14 @@
 
           <div class="field">
             <b>Role</b><br />
-            <%= f.radio_button :user_type, "teacher" %> Teacher<br />
+            <%= f.radio_button :user_type, "teacher", :checked => true %> Teacher<br />
             <%= f.radio_button :user_type, "student" %> Student<br />
           </div>
 
           <div class="d-flex justify-content-between align-items-center">
           </div>
 
-          <div class="text-center text-lg-start mt-8 pt-2">
+          <div class="text-center text-lg-start mt-8 pt-2 ">
             <%= f.submit "Sign up", :class => "btn btn-primary padding-left: 2.5em; padding-right: 2.5rem;" %>
             <p class="small fw-bold mt-8 pt-1 mb-0"><%= render "devise/shared/links" %></p>
           </div>
@@ -61,6 +61,9 @@
   </div>
 </section>
 
+<script>
+$(".btnn").checked = true;
+</script>
 
 
 
