--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,18 @@
     <% if user_signed_in? %>
       <%= render "shared/navbar"%>
     <%end%>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <div class="container">
+
+    
+    <div class="bg position-relative">
+    <div class='container p-5'>
       <%= yield %>
+      </div>
+      <% if notice || alert %>
+        <div class="alert alert-info position-absolute fixed-bottom check" style="height: 60px;">
+          <p class="notic"><%= notice %></p>
+          <p class="aler"><%= alert %></p>
+        </div>
+      <%end%>
     </div>
     
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
@@ -24,3 +32,12 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   </body> 
 </html>
+<style type="text/css">
+    .bg  {
+        min-height: 100vh;
+        background-color: #d1dfed;
+    }
+    .check {
+      margin-bottom: 55px
+    }
+</style>
