--- a/app/views/announcements/_announcement.html.erb
+++ b/app/views/announcements/_announcement.html.erb
@@ -1,6 +1,6 @@
 <%= javascript_pack_tag 'suggestions'%>
 
-<div class='d-flex flex-column w-100'>
+<div class='d-flex flex-column card w-100 p-3 mb-3'>
   <p class="d"><%= announcement.body %> by <%= announcement.user.name%></p>
 
   <div class='float-right'>
