--- a/app/views/announcements/_form.html.erb
+++ b/app/views/announcements/_form.html.erb
@@ -4,6 +4,6 @@
       <%= form.rich_text_area :body,  required: true%>
   </p>
   <p>
-      <%= form.submit %>
+      <%= form.submit :class => "btn btn-primary mb-2 classroom_read_button"%>
   </p>
 <% end %>
