--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <%if !@posts.nil? %>
 
-<div id="main_div", class="d-flex justify-content-center">
-<div id="news" class="container-fluid mb-5 w-75 row justify-content-center">
+<div id="main_div" class="d-flex justify-content-center">
+<div id="news" class="container-fluid mb-5 w-100 row justify-content-center">
   <% @posts.each do |post| %>
   <div class="news-main-div row justify-content-center padding ">
     <div class="">
