--- a/app/views/moderators/index.html.erb
+++ b/app/views/moderators/index.html.erb
@@ -1,33 +1,45 @@
-<div class="container w-100 justify-content-around row">
-<div class="m-2 card w-25">
-<h3>Reported Posts</h3>
-<% @reported.each do |report| %>
-<div class="card-body">
-  
-<div class="card">
- <div class="card-body">
- <strong>Total Report: <%=report.reports.count%></strong>
- <p><a href="/posts/<%=report.id%>">View post</a></p>
- </div>
- </div>
- 
- </div>
- <% end %>
- </div>
 
- <div class="m-2 card w-25">
- <h3>Inactive Posts</h3>
- <% @posts.each do |post| %>
- <% if post.status == 'inactive'%>
-<div class="card-body">
-<div class="card">
- <div class="card-body">
- <strong>Post Status: <%=post.status%></strong>
- <p><a href="/posts/<%=post.id%>">View post</a></p>
- </div>
- </div>
- </div>
-<%end%>
-<%end%>
- </div>
+<ul class='nav justify-content-center'>
+    <li class='nav-item'>
+        <span class='nav-link reported'>Reported Posts</span>
+    </li>
+    <li class='nav-item'>
+        <span class='nav-link inactive'>Inactive Posts</span>
+    </li>
+</ul>
+
+<div class="container w-100 justify-content-around row">
+   <div class="m-2 card w-25">
+        <h3>Reported Posts</h3>
+        <% @reported.each do |report| %>
+
+
+        <div class="card-body">
+        
+        <div class="card">
+        <div class="card-body">
+        <strong>Total Report: <%=report.reports.count%></strong>
+        <p><a href="/posts/<%=report.id%>">View post</a></p>
+        </div>
+        </div>
+        
+        </div>
+        <% end %>
+  </div>
+
+  <div class="m-2 card w-25">
+    <h3>Inactive Posts</h3>
+    <% @posts.each do |post| %>
+    <% if post.status == 'inactive'%>
+    <div class="card-body">
+    <div class="card">
+    <div class="card-body">
+    <strong>Post Status: <%=post.status%></strong>
+    <p><a href="/posts/<%=post.id%>">View post</a></p>
+    </div>
+    </div>
+    </div>
+    <%end%>
+    <%end%>
+  </div>
 </div>
