--- a/app/views/classrooms/edit.html.erb
+++ b/app/views/classrooms/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Classroom</h1>
-
+<div class="new_classroom mb-5">
+  <h3>Editing Classroom</h3>
+</div>
 <%= render 'form', classroom: @classroom %>
 
-<%= link_to 'Show', @classroom %> |
-<%= link_to 'Back', classrooms_path %>
