--- a/app/views/classworks/_classwork.html.erb
+++ b/app/views/classworks/_classwork.html.erb
@@ -20,3 +20,16 @@
 </div>
 <%end%>
 <hr />
+
+<style type="text/css">
+
+  .card:hover {
+    box-shadow: 1px 1px 1px black;
+    transform:scale(1);
+  }
+
+  .card {
+  transition:.5s;
+  }
+
+</style>
