--- a/app/views/classworks/_form.html.erb
+++ b/app/views/classworks/_form.html.erb
@@ -24,7 +24,7 @@
   </p>
   </ul>
 
-  <p class='mt-5'>
+  <p class='mt-5 bg-white p-3 card shadow-lg mb-5 bg-white rounded'>
     <%= form.rich_text_area :body,  required: true%>
   </p>
 
