--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <%end%>
 
     
-    <div class="bg position-relative">
+    <div class="bg position-relative" >
     <div class='container p-5'>
       <%= yield %>
       </div>
@@ -35,7 +35,7 @@
 <style type="text/css">
     .bg  {
         min-height: 100vh;
-        background-color: #d1dfed;
+        background-color: #e6e8e6;
     }
     .check {
       margin-bottom: 55px
