--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Post</h1>
-
+<div class="new_classroom mb-5">
+  <h3>Editing Post</h3>
+</div>
 <%= render 'form', post: @post %>
-
-<%= link_to 'Show', @post, :class => "btn btn-sm btn-outline-primary padding-left: 2.5em; padding-right: 2.5rem; mt-2" %>
-<%= link_to 'Back', posts_path, :class => "btn btn-sm btn-outline-primary padding-left: 2.5em; padding-right: 2.5rem; mt-2"%>
