--- a/app/views/userclasses/_form.html.erb
+++ b/app/views/userclasses/_form.html.erb
@@ -13,13 +13,15 @@
     </div>
   <% end %>
 
-  <div class="classroom_form">
-    <div class="card p-5 mt-5">
-
-    <div class="field">
-      <%= form.text_field :class_code, placeholder: "Enter Class code" %>
-    </div>
-      <div class="actions new_classroom mt-5">
+  <div class="classroom_form ">
+    <div class="card">
+      <div class='card-header d-flex flex-row justify-content-center'>
+        <h4>Join Classroom</h4>
+      </div>
+      <div class="field card-body d-flex flex-column justify-content-center">
+        <%= form.text_field :class_code, placeholder: "Enter Class code" %>
+      </div>
+      <div class="actions card-footer d-flex flex-row justify-content-center">
         <button type="submit" class="btn btn-primary">Join Classroom</button>
       </div>
     </div>
@@ -28,3 +30,18 @@
 
 <% end %>
 </div>
+
+<style type="text/css">
+
+  .card:hover {
+    box-shadow: 1px 1px 1px black;
+    transform:scale(1);
+  }
+
+  .card {
+    min-height: 300px;
+    min-width: 500px;
+    transition:.3s;
+    margin: 3rem;
+  }
+</style>
